# agentic-batch-processing

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
agentic_batch_processor/: __init__.py  __main__.py  config.py  mcp_server.py  mcp_tools.py
agentic_batch_processor/core/: job_executor.py  models.py  orchestrator.py  prompt_synthesizer.py  worker_pool.py
agentic_batch_processor/dashboard/: __init__.py  __main__.py  http_server.py
agentic_batch_processor/dashboard/api/: __init__.py  routes.py  schemas.py  services.py
agentic_batch_processor/dashboard/static/: app.js  index.html
agentic_batch_processor/dashboard/static/components/: LiveWorkerViz.js  Timeline.js
agentic_batch_processor/dashboard/static/lib/: hooks.module.js  marked.esm.js
agentic_batch_processor/dashboard/static/styles/: main.css
agentic_batch_processor/enumerators/: __init__.py  base.py  csv_enumerator.py  dynamic_enumerator.py  file_enumerator.py  json_enumerator.py  registry.py  sql_enumerator.py
agentic_batch_processor/persistence/: repository.py
agentic_batch_processor/workers/: base.py  claude_cli_worker.py
demo/: README.md  prompt.txt  sample_report.html
demo/output/: photo_analysis.db  report.html
docs/: architecture.md  claude-cli-integration.md  patterns.md  troubleshooting.md  usage-guide.md
docs/components/: dashboard.md  enumerators.md  job-manager.md  mcp-server.md  models.md  orchestrator.md  persistence.md  prompt-synthesizer.md  worker-pool.md  workers.md
scripts/: dev_reset.py
tests/: test_enumerators.py  test_models.py  test_orchestrator.py  test_repository.py
