[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentic-batch-processor"
version = "0.1.0"
description = "Framework for parallel LLM agent-based batch processing with persistent state and fault tolerance"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    {name = "andrasp"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "flake8>=6.0.0",
    "autoflake>=2.0.0",
    "psutil>=5.8.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0", 
    "pytest-asyncio>=0.21.0",
    "psutil>=5.8.0",
]

[project.scripts]
abp-dashboard = "agentic_batch_processor.dashboard:run_server"
abp-mcp = "agentic_batch_processor.mcp_server:run_mcp_server"

[tool.hatch.build.targets.wheel]
packages = ["agentic_batch_processor"]

[tool.hatch.build.targets.wheel.force-include]
"agentic_batch_processor/dashboard/static" = "agentic_batch_processor/dashboard/static"

[tool.black]
line-length = 120
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3

[tool.flake8]
max-line-length = 999  # Effectively disable line length checking
extend-ignore = [
    "E203",  # whitespace before ':' (conflicts with black)
    "W503",  # line break before binary operator (conflicts with black)
    "E501",  # line too long (let black handle this)
    "F541",  # f-string is missing placeholders (often intentional for consistency)
]

[tool.mypy]
python_version = "3.12"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
check_untyped_defs = false
strict_optional = false
disable_error_code = ["arg-type", "return-value", "var-annotated", "assignment", "list-item", "call-arg", "union-attr"]
